# aitravelplanner

./: README.md  chat.txt  pyproject.toml  requirements.txt
src/: main.py
src/agents/: travel_agent.py
src/config/: clients.py  settings.py
src/models/: amadeus_models.py  enums.py  openweather_models.py  place_models.py  travel_models.py
src/tools/: amadeus_tools.py  arithmetic_tools.py  exchange_rate_tools.py  maps_tools.py  serpapi_tools.py  util_tools.py  weather_tools.py
tests/: test_tools.py
